# rule-of-the-day-api

./: .gitignore  Cargo.toml  README.md  build-azure-function-handler.sh
.devcontainer/: devcontainer.json
src/: main.rs  models.rs  traits.rs  types.rs
src/handlers/: mod.rs  rotd.rs
src/providers/: azure_credential_provider.rs  azure_tables_rotd_provider.rs  mod.rs
src/traits/: credential_provider.rs  mod.rs  rotd_provider.rs
