[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
chrono = "0.4.22"
rand_chacha = "0.3.1"
rand = "0.8.5"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
